--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
     </div>
   </div>
 
-  <script src="scripts/main.js"></script>
+  <script type="module" src="scripts/main.js"></script>
 </body>
 </html>
