--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <link rel="stylesheet" href="css/style.css" />
   <link rel="stylesheet" href="css/input.css" />
   <link rel="stylesheet" href="css/button.css" />
+  <link rel="stylesheet" href="css/task-list.css" />
+  <link rel="stylesheet" href="css/filters.css" />
+  <link rel="stylesheet" href="css/svg.css" />
 </head>
 <body>
     
